2004-06-01 Braden McDaniel  <braden@endoframe.com>

	* README:  Mention license terms for the Mozilla plug-in.

2004-05-26 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes and improvements.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/node.cpp

2004-05-16 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/Makefile.am:  Fixed package name for
	idldir.

2004-05-16 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Added target for "manual"; added "manual" to
	MAINTAINERCLEANFILES.

2004-05-15 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Use "License" instead of "Copyright";
	require xorg-x11 packages instead of XFree86; removed "Prefix"
	specification; use "%configure" macro; install script.jar; use
	%{_libdir}, etc. macros; install openvrml.idl.

2004-05-15 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/configure.ac:  Escape brackes in regexp for
	processing by m4; remove "componentsdir" substitution.
	* mozilla-plugin/src/Makefile.am:  Install typelib in the
	plugins directory.

2004-05-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field.h:  Quell complaint from
	doxygen.

2004-05-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Fixed name
	of combined_vertex_data_ for cl 13.10.3077.

2004-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Corrected description of lookat RPM to
	reflect the change to using SDL; define NDEBUG when configuring.

2004-05-09 Braden McDaniel  <braden@endoframe.com>

	* Makefile.am:  Build the Mozilla plug-in before building the
	tests.

2004-05-08 Braden McDaniel  <braden@endoframe.com>

	Doxygen 1.3.7 doesn't like out-of-line documentation of friends
	using "@var".

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/script.cpp