@@ -1,5 +1,10 @@
 2004-06-01 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/vrml97node.cpp:  Fixed crash on last
+	frame of MovieTexture.
+
+2004-06-01 Braden McDaniel  <braden@endoframe.com>
+
 	* README:  Mention license terms for the Mozilla plug-in.
 
 2004-05-26 Braden McDaniel  <braden@endoframe.com>
